# emotional-companionship

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .gitignore  AI_DIARY_API.md  README.md  requirements.txt  test_compressor.py  test_diary.py
backend/.github/workflows/: ci.yml
backend/app/: __init__.py  main.py  vector_index.py
backend/app/api/: __init__.py
backend/app/characters/: asr.py  sister.yaml  tts.py
backend/app/config/: time_expressions.py
backend/app/models/: __init__.py  character.py  chat.py  database.py  diary.py
backend/app/schemas/: character.py  chat_history.py  message.py
backend/app/services/: character_service.py  character_storage_service.py  chat_history_service.py  chat_service.py  chat_service_v2.py  chunk_text.py  diary_service.py  embedding.py  llm.py  time_parser.py
backend/app/services/deepmemo/: Cargo.toml
backend/memory/: __init__.py
backend/plugins/: plugin.py  test_deepmemo.py  test_vcp_tool_call.py  tool_call_parser.py  tool_executor.py
backend/scripts/: migrate_to_filesystem.py  reindex_tags.py
backend/tests/: conftest.py  test_character_integration.py  test_deepseek_llm.py  test_llm_base.py  test_llm_configs.py  test_memory_v2_e2e.py  test_quality_checker.py  test_qwen_llm.py  test_tag_generator.py  test_timeline_summary_prompt.py  test_vector_index.py
docs/: deepmemo-technical-design.md
frontend/: README.md  index.html  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx  index.css
vector-db/: Cargo.toml  test.py
vector-db/src/: lib.rs
(+151 files in other folders)
