[package]
name = "vector-db"
version = "0.1.0"
edition = "2024"

[lib]
name = "vector_db"
crate-type = ["cdylib"]

[dependencies]
# PyO3 - Rust 绑定到 Python
pyo3 = { version = "0.22", features = ["extension-module"] }

# 序列化
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# HNSW向量索引
usearch = "2.8"

# 哈希Map优化
hashbrown = "0.14"

# 线性代数 (用于 SVD)
nalgebra = "0.32"

# SQLite 数据库驱动
rusqlite = { version = "0.29", features = ["bundled"] }

[profile.release]
lto = true           # 链接时优化
codegen-units = 1    # 最大优化
opt-level = 3        # 最高优化级别
strip = true         # 移除符号信息
