[package]
name = "deepmemo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
jieba-rs = "0.6"
tantivy = "0.19"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
ammonia = "3.3.0"
glob = "0.3"
chrono = "0.4"
regex = "1.5"
futures = "0.3"
lazy_static = "1.4"